# Agno

./: .gitignore  README.md  pyproject.toml  requirements.txt
10_agno_RAG/: agentic_rag.py
11_RAG_with_Agents_and_route/: agents_three.py
12_MCP_with_Agno/1_Filesystem_Agent/: filesystem_agent.py
12_MCP_with_Agno/2_Airbnb_MCP/: airbnb_mcp_agent.py
12_MCP_with_Agno/3_Pipedream_Slack/: pipedream_slack.py
13_AgentOS_as_MCP_Server/: agent_os_enable_mcp_server.py  test_client.py
13_AgentOS_as_MCP_Server/prompts_agent_os_and_mcp/: prompts.py
14_Workflow_Agno_in_Industry/: teste_industry.py
15_AgentOS/: interacting_with_agent_os.py  my_agent_os.py
16_Agno_and_GO/: client_golang.go  go.mod  server_agno.py
16_Agno_and_GO/api/: agno_client.go
17_Rastreio/: tracking.py
1_quick_start_for_agno/: web_search_with_agno.py
2_structured_output_with_agno/: structured_output_in_agents.ipynb  structured_output_movie_agent.py
3_my_first_Agent/: 1_basic_agent.py  2_agent_with_tools.py  3_agent_with_knowledge.py  4_multi_agent_teams.py  5_news_agent.py  6_agent_data_analyst.py  7_reasoning_agent.py  8_reasoning_finance_agent.py
4_agno_and_crewai/: agent_using_agno-crewai_streamlit.py
5_agno_multimodal/: audio_input_output.py  audio_multi_turn.py  audio_sentiment_analysis.py  audio_streaming.py  image_to_structured_output.py  structured_data_extraction_from_images.py
6_route_mode/: multi_language_team.py  structured_output_with_route_mode.py
7_agent_movie_recomendation/: agent_movie_recomendation.py
8_Memory_with_Agno/: agent_memory.py  memory_and_storage_in_action.py  storage.py
9_Recipe_AI_Agent_with_Google_API/: agent_demonstration.py  demo.py  recipe_recommendation_agent.py  setup_agent.py
config/: logging_config.py  settings.py
