[project]
name = "projects-using-the-agno-library"
version = "0.1.0"
description = "Aqui, usaremos uma biblioteca leve chamada Agno para construir Agentes Multimodais"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.2.8",
    "anthropic>=0.50.0",
    "docx2pdf>=0.1.8",
    "duckdb>=1.2.2",
    "duckduckgo-search==8.0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lancedb>=0.21.2",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.4",
    "ollama>=0.4.7",
    "openai>=1.70.0",
    "openai-agents>=0.0.9",
    "pandas>=2.2.3",
    "pgvector>=0.4.0",
    "psycopg>=3.2.6",
    "pymupdf>=1.25.5",
    "pypdf>=5.4.0",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "yfinance>=0.2.55",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
