[project]
name = "projects-using-the-agno-library"
version = "0.1.0"
description = "Aqui, usaremos uma biblioteca leve chamada Agno para construir Agentes Multimodais"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aftership-tracking-sdk==9.0.0",
    "agno==2.3.24",
    "aiohttp==3.13.2",
    "aiosqlite==0.21.0",
    "anthropic==0.75.0",
    "beautifulsoup4>=4.13.3",
    "black>=25.1.0",
    "ddgs>=9.9.3",
    "docx2pdf>=0.1.8",
    "duckdb>=1.2.2",
    "duckduckgo-search==8.0.0",
    "exa-py>=1.14.12",
    "fastapi>=0.115.13",
    "fastmcp>=2.13.3",
    "google-genai>=1.21.1",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lancedb==0.25.3",
    "mcp>=1.9.4",
    "mistralai>=1.8.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.4",
    "ollama>=0.4.7",
    "openai==2.11.0",
    "openai-agents>=0.0.9",
    "openinference-instrumentation-agno>=0.1.23",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "pandas>=2.2.3",
    "pgvector>=0.4.0",
    "psycopg>=3.2.6",
    "pydantic==2.12.5",
    "pylance>=0.28.0",
    "pymongo[srv]>=4.13.2",
    "pymupdf>=1.25.5",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "tantivy>=0.24.0",
    "uvicorn[standard]==0.38.0",
    "websockets>=15.0.1",
    "yfinance>=0.2.55",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
